--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # ===============================
 # = DATA SOURCE
 # ===============================
-spring.datasource.url = jdbc:mysql://localhost:3306/gameaccaunt
+spring.datasource.url = jdbc:mysql://localhost:3306/gameaccount
 spring.datasource.username = root
 spring.datasource.password = 123456
 spring.datasource.testWhileIdle = true
